--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+
+    <div id="preloader">
+        <img src="./preloader/yy3.gif" alt="preloader">
+    </div>
+
     <div id="name">Clock<p>By- Arjun Dagar</p>
     </div>
     <div id="container">
