--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         <img src="./preloader/yy3.gif" alt="preloader">
     </div>
 
-    <div id="name">Clock<p>By- Arjun Dagar</p>
+    <div id="name">Clock<div id="arjun">
+            <p>By- Arjun Dagar</p>
+        </div>
     </div>
+
     <div id="container">
         <div id="center"></div>
         <div id="hour">
