--- a/index.html
+++ b/index.html
@@ -21,26 +21,226 @@
         <img src="./preloader/yy3.gif" alt="preloader">
     </div>
 
-    <div id="name">Clock<div id="arjun">
-            <p>By- Arjun Dagar</p>
+    <div id="clock">
+
+        <div class="right-scroll">
+            <button id="first-button"><img src="./Images/right arroe.svg" alt=""></button>
+        </div>
+
+        <div id="name">Clock
+            <div id="arjun">
+                <p>By- Arjun Dagar</p>
+            </div>
+        </div>
+
+        <div id="container">
+            <div id="center"></div>
+            <div id="hour">
+                <img src="./Images/hour hand.png" alt="">
+            </div>
+            <div id="minute">
+                <img src="./Images/minute hand.png" alt="">
+            </div>
+            <div id="seconds">
+                <img src="./Images/minute hand.png" alt="">
+            </div>
+        </div>
+
+        <div id="digital">Today is: <span id="date"> </span> / <span id="month"></span> /
+            <span id="year"></span><br><span id="day"></span>
+        </div>
+
+    </div>
+
+    <div id="timer">
+
+        <div class="left-scroll">
+            <button id="second-button"><img src="./Images/left arrow.svg" alt=""></button>
+        </div>
+
+        <div class="right-scroll third">
+            <button id="third-button"><img src="./Images/right arroe.svg" alt=""></button>
+        </div>
+
+        <div id="input-date">
+            <h1>Select Event Date and Time</h1>
+            <div class="selection">
+                <div id="d">
+                    <select required>
+                    <option value="">--Select date--</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                    <option value="22">22</option>
+                    <option value="23">23</option>
+                    <option value="24">24</option>
+                    <option value="25">25</option>
+                    <option value="26">26</option>
+                    <option value="27">27</option>
+                    <option value="28">28</option>
+                    <option value="29">29</option>
+                    <option value="30">30</option>
+                    <option value="31">31</option>
+                  </select>
+                </div>
+                <div id="m">
+                    <select required>
+                    <option value="">--Select month--</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                  </select>
+                </div>
+                <div id="y">
+                    <select required>
+                    <option value="">--Select year--</option>
+                    <option value="2021">2021</option>
+                    <option value="2022">2022</option>
+                    <option value="2023">2023</option>
+                    <option value="2024">2024</option>
+                    <option value="2025">2025</option>
+                    <option value="2026">2026</option>
+                    <option value="2027">2027</option>
+                    <option value="2028">2028</option>
+                    <option value="2029">2029</option>
+                    <option value="2030">2030</option>
+                    <option value="2031">2031</option>
+                  </select>
+                </div>
+                <div id="h">
+                    <select required>
+                    <option value="">--Select time hour--</option>
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                    <option value="22">22</option>
+                    <option value="23">23</option>
+                  </select>
+                </div>
+                <div id="mn">
+                    <select required>
+                    <option value="">--Select time min--</option>
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                    <option value="22">22</option>
+                    <option value="23">23</option>
+                    <option value="24">24</option>
+                    <option value="25">25</option>
+                    <option value="26">26</option>
+                    <option value="27">27</option>
+                    <option value="28">28</option>
+                    <option value="29">29</option>
+                    <option value="30">30</option>
+                    <option value="31">31</option>
+                    <option value="32">32</option>
+                    <option value="33">33</option>
+                    <option value="34">34</option>
+                    <option value="35">35</option>
+                    <option value="36">36</option>
+                    <option value="37">37</option>
+                    <option value="38">38</option>
+                    <option value="39">39</option>
+                    <option value="40">40</option>
+                    <option value="41">41</option>
+                    <option value="42">42</option>
+                    <option value="43">43</option>
+                    <option value="44">44</option>
+                    <option value="45">45</option>
+                    <option value="46">46</option>
+                    <option value="47">47</option>
+                    <option value="48">48</option>
+                    <option value="49">49</option>
+                    <option value="50">50</option>
+                    <option value="51">51</option>
+                    <option value="52">52</option>
+                    <option value="53">53</option>
+                    <option value="54">54</option>
+                    <option value="55">55</option>
+                    <option value="56">56</option>
+                    <option value="57">57</option>
+                    <option value="58">58</option>
+                    <option value="59">59</option>
+                  </select>
+                </div>
+            </div>
+
+            <button onclick="timer()">OK</button>
+        </div>
+
+        <div id="output-time">
+            <div class="time"><p>00</p><span>Days</span></div>
+            <div class="time"><p>00</p><span>Hour</span></div>
+            <div class="time"><p>00</p><span>Min</span></div>
+            <div class="time"><p>00</p><span>Sec</span></div>
         </div>
     </div>
 
-    <div id="container">
-        <div id="center"></div>
-        <div id="hour">
-            <img src="./Images/hour hand.png" alt="">
-        </div>
-        <div id="minute">
-            <img src="./Images/minute hand.png" alt="">
-        </div>
-        <div id="seconds">
-            <img src="./Images/minute hand.png" alt="">
-        </div>
-    </div>
-    <div id="digital">Today is: <span id="date"> </span> / <span id="month"></span> /
-        <span id="year"></span><br><span id="day"></span>
-    </div>
     <script src="./action.js"></script>
 </body>
 
