--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         <img src="./preloader/yy3.gif" alt="preloader">
     </div>
 
+    <div id="nav-bar">
+        <ul>
+            <li><button>Clock</button></li>
+            <li><button>Event Timer</button></li>
+            <li><button>Stopwatch</button></li>
+        </ul>
+    </div>
+
     <div id="outer-wrapper">
         <div id="wrapper">
             <div id="clock">
