--- a/index.html
+++ b/index.html
@@ -29,6 +29,39 @@
         </ul>
     </div>
 
+    <!-- <nav class="navbar navbar-expand-custom navbar-mainbg">
+        <a class="navbar-brand navbar-logo" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fas fa-bars text-white"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <div class="hori-selector">
+                    <div class="left"></div>
+                    <div class="right"></div>
+                </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0);"><i class="fas fa-tachometer-alt"></i>Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0);"><i class="far fa-address-book"></i>Clock</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0);"><i class="far fa-clone"></i>Stopwatch</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0);"><i class="far fa-calendar-alt"></i>Event Timer</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0);"><i class="far fa-copy"></i>Documents</a>
+                </li>
+            </ul>
+        </div>
+    </nav> -->
+
     <div id="outer-wrapper">
         <div id="wrapper">
             <div id="clock">
@@ -37,11 +70,11 @@
                     <button id="first-button"><img src="./Images/right arroe.svg" alt=""></button>
                 </div>
 
-                <div id="name">Clock
+                <!-- <div id="name">Clock
                     <div id="arjun">
                         <p>By- Arjun Dagar</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div id="container">
                     <div id="center"></div>
@@ -56,7 +89,7 @@
                     </div>
                 </div>
 
-                <div id="digital"><span id="date"> </span><span id="suffix"></span> of <span id="month"></span> 
+                <div id="digital"><span id="date"> </span><span id="suffix"></span> of <span id="month"></span>
                     <span id="year"></span><br><span id="day"></span>
                 </div>
 
@@ -261,6 +294,7 @@
         </div>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./action.js"></script>
 </body>
 
